--- a/bankruptcy_classification/bankruptcy_predict.ipynb
+++ b/bankruptcy_classification/bankruptcy_predict.ipynb
@@ -1,8 +1,21 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 프로젝트 개요\n",
+    "bankruptcy data에서 파산여부를 이진분류 하는 모델을 학습시켰다. <br>\n",
+    "bankruptcy data에는 95개의 Column이 존재한다. 연산량을 줄이고 성능을 높이기 위해 여러 특성들 중 유의미한 특성들을 추려 독립변수 X로 잡았다. <br>\n",
+    "이후, train, test data를 나누고 학습시켜 test data에 대해 예측을 했다 <br>\n",
+    "결과를 보면 정확도가 매우 높지만, data의 imbalance한 특성 때문에 1에 대한 recall값이 매우 낮게 나왔다. (거의 모든 회사를 파산하지 않을 것이라고 예측) <br>\n",
+    "강의 때는, 훨씬 많은 y=0인 데이터들을 삭제하여 Under sampling을 통해 문제를 해결하였다. <br>\n",
+    "따라서 이번엔, Over sampling을 통하여 상대적으로 적은 y=1인 데이터들을 임의로 생성해 imbalance한 문제를 해결해보았다. <br>"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -503,7 +516,7 @@
        "[6819 rows x 96 columns]"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -529,7 +542,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -549,10 +562,28 @@
       " Equity to Liability                                        0\n",
       "Length: 96, dtype: int64\n"
      ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "(6819, 96)"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "print(df.isnull().sum())"
+    "print(df.isnull().sum())\n",
+    "df.shape"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "##### 결측치는 없다."
    ]
   },
   {
@@ -1209,6 +1240,13 @@
     "selected_names = all_names[selected_mask]\n",
     "\n",
     "print(f'Selected names: {selected_names}')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "##### SelectKBest를 통해 선택한 2개의 변수: [' ROA(A) before interest and % after tax', ' Net Income to Total Assets']"
    ]
   },
   {
